# flickers

./: Cargo.toml  README.md  readme.md
examples/: adev.rs  test_data.rs
python-tests/: load.py  simple.py
src/: dev_computer.rs  dev_result.rs  enums.rs  lib.rs
src/api/: dev_result.rs  mod.rs
src/dev/: adev.rs  mod.rs  oadev.rs
src/noise/detect/: b1.rs  lag1.rs  mod.rs
src/py_module/: dev.rs  mod.rs  test_suite.rs  translate.rs
src/test_suite/: mod.rs
src/utils/: chi2.rs  mod.rs  ms.rs
